<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickHandler"
            type="com.zapps.appsFlowModule.interfaces.MyOnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPinkWhite">


        <androidx.cardview.widget.CardView
            android:id="@+id/rootViewPolicy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/headPrivacy"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_30sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:scrollbars="none"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toTopOf="@+id/btnPrivacyDecline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_25sdp"
                            android:text="@string/ppThanks"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintHorizontal_bias="0.0" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:text="@string/ppHead1"
                            android:textColor="@color/colorTextPrimaryDark"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/ppDesc1"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintHorizontal_bias="0.0" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:text="@string/ppHeadTwo"
                            android:textColor="@color/colorTextPrimaryDark"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/ppDescTwo"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintHorizontal_bias="0.0" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:text="@string/ppHeadThree"
                            android:textColor="@color/colorTextPrimaryDark"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/ppDescThree"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintHorizontal_bias="0.0" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:text="@string/furthurInfo"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintHorizontal_bias="0.0" />

                        <TextView
                            android:id="@+id/tvLink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:autoLink="web"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:linksClickable="true"
                            android:textColor="@color/colorPrimaryDark"
                            android:textColorLink="@color/colorPrimaryDark"
                            android:textSize="@dimen/_12sdp" />


                        <CheckBox
                            android:id="@+id/checkboxConfirmPrivacy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:buttonTint="@color/colorPrimary"
                            android:text="@string/ppChecked"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_11sdp"

                            />
                    </LinearLayout>
                </ScrollView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnPrivacyDecline"
                    android:layout_width="@dimen/_105sdp"
                    android:layout_height="@dimen/_37sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/selector_b_b_language"
                    android:elevation="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/franklin_gothic_medium"
                    android:gravity="center"
                    android:maxLines="1"
                    android:onClick="@{(v)->clickHandler.onClick(v)}"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:text="@string/decline"
                    android:textAllCaps="true"
                    android:textColor="@color/text_selector_b_language"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnPrivacyAccept"
                    android:layout_width="@dimen/_105sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/selector_b_b_privacy_accept"
                    android:elevation="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/franklin_gothic_medium"
                    android:gravity="center"
                    android:maxLines="1"
                    android:onClick="@{(v)->clickHandler.onClick(v)}"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"

                    android:text="@string/accept"
                    android:textAllCaps="true"
                    android:textColor="@color/text_selector_privacy_accept"
                    android:textSize="@dimen/_12sdp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>